--- a/index.html
+++ b/index.html
@@ -299,7 +299,9 @@
     </aside>
 
   </main>
-
+  <div class="msg">
+    <h2>Por favor acessar em um Computador/Notebook</h2>
+  </div>
 
   <script src="./src/js/script.js"></script>
 </body>
